Changelog for plone.app.portlets

    (name of developer listed in brackets)


plone.app.portlets 1.1.0 (UNRELEASED)

    - Added option to purge all assignments specified by category and key.
      [fschulze]

    - Added option to remove individual portal managers and purge global
      portlet manager assignments as well as assignments to the site root
      with GS profiles.
      [fschulze]

    - Added option to purge portlet configuration in extension profiles.
      [fschulze]


plone.app.portlets 1.1.0a1 (2008-03-09)

    - Fixed bug that caused includeTop not to be set when a navtree portlet
      was first added.
      http://dev.plone.org/plone/ticket/7798.
      [optilude]
    
    - Made the language portlet's 'available' property work properly, avoiding
      ugly blank columns.
      [optilude]
    
    - Made sure the manage portlets div is not shown to anonymous users.
      http://dev.plone.org/plone/ticket/7911.
      [optilude]
    
    - Optimised the news portlet template.
      http://dev.plone.org/plone/ticket/7760
      [optilude]

    - Made the <plone:portletRenderer /> directive more forgiving.
      http://dev.plone.org/plone/ticket/7703
      [optilude]

    - Fixed a silly bug in the search portlet.
      http://dev.plone.org/plone/ticket/7388.
      [optilude]

    - Made it possible to remove single portlet assignments by using the
      "remove" attribute.
      [fschulze]

    - PLIP203: Add the ability to export and import portlet assignments and
      blacklisting.
      [optilude]

    - PLIPs 205 and 218: Allow registering portlet types to multiple portlet
      manager interfaces, require portlet types to be explicitly registered
      for portlet manager interfaces, enable modifying registrations through
      GenericSetup, and restrict most default Plone portlet types to left/
      right/dashboard columns.
      [sirgarr]
    
    - PLIP207: Allow custom portlet managers, i.e., allow specifying an