@@ -5,6 +5,9 @@ Changelog for plone.app.portlets
 
 plone.app.portlets 1.1.0 (UNRELEASED)
 
+    - Add proxy support to the RSS portlet.
+      [tesdal, wichert]
+
     - Added option to purge all assignments specified by category and key.
       [fschulze]
 
